--- a/samples.html
+++ b/samples.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <title></title>
-<script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="picasatter.min.js"></script>
-<link rel="stylesheet" href="demo.css" />
-<link rel="stylesheet" href="picasatter.css" />
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/picasatter.min.js"></script>
+<link rel="stylesheet" href="css/demo.css" />
+<link rel="stylesheet" href="css/picasatter.css" />
 </head>
 <body>
 <h1>Picasatter Widget</h1>
