Fix samples.html to private mode.

--- a/samples.html
+++ b/samples.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Picasatter Widget</h1>
 <h2>Demo Widgets:</h2>
-<div class="picasatter" id="album1" user="username" album="albumid"></div>
+<div class="picasatter" id="album1" user="username" album="albumid" authkey="key"></div>
 <div class="render" id="rend">stoping</div>
 </body>
 </html>
