add film design css
add film design and change stylesheet from css/picasatter.css
to css/style.css. And samples.html uses only css/style.css

--- a/samples.html
+++ b/samples.html
@@ -1,12 +1,11 @@
 <html>
 <head>
 <title></title>
+<link rel="stylesheet" href="css/style.css" />
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/picasatter.min.js"></script>
-<link rel="stylesheet" href="css/demo.css" />
-<link rel="stylesheet" href="css/picasatter.css" />
 </head>
-<body>
+<body class="base">
 <h1>Picasatter Widget</h1>
 <h2>Demo Widgets:</h2>
 <div class="picasatter" id="album1" user="username" album="albumid" authkey="key"></div>
