add mouse click feature for main window
When you click thumbnail in side,
show the picture to main window.

--- a/samples.html
+++ b/samples.html
@@ -9,7 +9,7 @@
 <h1>Picasatter Widget</h1>
 <h2>Demo Widgets:</h2>
 <div class="main">
-<img src="https://lh4.googleusercontent.com/-602l5j1hMgo/T_RDvReuE7I/AAAAAAAAAvU/Heo3PpiOK4I/Jellyfish.jpg" ></div>
+<img class="photo" id="main_window" src="https://lh4.googleusercontent.com/-602l5j1hMgo/T_RDvReuE7I/AAAAAAAAAvU/Heo3PpiOK4I/Jellyfish.jpg" ></div>
 </div>
 <div class="side">
 <div class="picasatter" id="album1" user="username" album="albumid" authkey="key"></div>
