--- a/samples.html
+++ b/samples.html
@@ -2,7 +2,7 @@
 <head>
 <title></title>
 <link rel="stylesheet" href="css/style.css" />
-<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.1.7.2.min.js"></script>
 <script type="text/javascript" src="js/picasatter.min.js"></script>
 </head>
 <body class="base">
