can use summary from picasa feeds

--- a/samples.html
+++ b/samples.html
@@ -13,6 +13,7 @@
 </div>
 <div class="side">
 <div class="picasatter" id="album1" user="username" album="albumid" authkey="key"></div>
+<div class="summary" id="title">photo_title</div>
 <div class="render" id="rend">stoping</div>
 </div>
 </body>
