implement mousewheel scroll and fix some bugs
 bug1: system fail to import js/jquery.mousewheel.js
 bug2: when no photos exist in picasatter class,
       it is not able to scroll
       (you can scroll picasatter class by moving
        mousewheel on main_window)

--- a/samples.html
+++ b/samples.html
@@ -3,8 +3,8 @@
 <title></title>
 <link rel="stylesheet" href="css/style.css" />
 <script type="text/javascript" src="js/jquery.1.7.2.min.js"></script>
+<script type="text/javascript" src="js/jquery.mousewheel.js"></script>
 <script type="text/javascript" src="js/picasatter.min.js"></script>
-<script type-"text/javaxcript" src-"js/jquery.mousewheel.js"></script>
 </head>
 <body class="base">
 <h1>Picasatter Widget</h1>
