modify drawtable from html to javascript

--- a/samples.html
+++ b/samples.html
@@ -10,78 +10,7 @@
   </head>
   <body class="base">
     <div class="main">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th id="ha">a</th>
-            <th id="hb">b</th>
-            <th id="hc">c</th>
-            <th id="hd">d</th>
-            <th id="he">e</th>
-            <th id="hf">f</th>
-            <th id="hg">g</th>
-            <th id="hh">h</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td id="d1a">◯</td>
-            <td id="d1b">◯</td>
-            <td id="d1c">◯</td>
-            <td id="d1d">◯</td>
-            <td id="d1e">◯</td>
-            <td id="d1f">◯</td>
-            <td id="d1g">◯</td>
-            <td id="d1h">◯</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td id="d2a">◯</td>
-            <td id="d2b">◯</td>
-            <td id="d2c">◯</td>
-            <td id="d2d">◯</td>
-            <td id="d2e">◯</td>
-            <td id="d2f">◯</td>
-            <td id="d2g">◯</td>
-            <td id="d2h">◯</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td id="d3a">◯</td>
-            <td id="d3b">◯</td>
-            <td id="d3c">◯</td>
-            <td id="d3d">◯</td>
-            <td id="d3e">◯</td>
-            <td id="d3f">◯</td>
-            <td id="d3g">◯</td>
-            <td id="d3h">◯</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td id="d4a">◯</td>
-            <td id="d4b">◯</td>
-            <td id="d4c">◯</td>
-            <td id="d4d">◯</td>
-            <td id="d4e">◯</td>
-            <td id="d4f">◯</td>
-            <td id="d4g">◯</td>
-            <td id="d4h">◯</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td id="d5a">◯</td>
-            <td id="d5b">◯</td>
-            <td id="d5c">◯</td>
-            <td id="d5d">◯</td>
-            <td id="d5e">◯</td>
-            <td id="d5f">◯</td>
-            <td id="d5g">◯</td>
-            <td id="d5h">◯</td>
-          </tr>
-        </tbody>
-      </table>
+      <table class="table table-bordered" rows="1,2,3,4,5" columns="a,b,c,d,e,f,g,h" ></table>
       <img class="photo" id="main_window" src="https://lh4.googleusercontent.com/-602l5j1hMgo/T_RDvReuE7I/AAAAAAAAAvU/Heo3PpiOK4I/Jellyfish.jpg" >
       <div class="summary" id="title">photo_title</div>
     </div>
