move "photo" class (<img> to <div>)

--- a/samples.html
+++ b/samples.html
@@ -11,7 +11,9 @@
   <body class="base">
     <div class="main">
       <table class="table table-bordered" rows="1,2,3,4,5" columns="a,b,c,d,e,f,g,h" ></table>
-      <img class="photo" id="main_window" src="https://lh4.googleusercontent.com/-602l5j1hMgo/T_RDvReuE7I/AAAAAAAAAvU/Heo3PpiOK4I/Jellyfish.jpg" >
+      <div class="photo">
+        <img id="main_window" src="https://lh4.googleusercontent.com/-602l5j1hMgo/T_RDvReuE7I/AAAAAAAAAvU/Heo3PpiOK4I/Jellyfish.jpg" >
+      </div>
       <div class="summary" id="title">photo_title</div>
       <div class="toolcircle"></div>
       <div class="toolcross"></div>
