add countup feature

--- a/samples.html
+++ b/samples.html
@@ -10,7 +10,7 @@
   </head>
   <body class="base">
     <div class="main">
-      <table class="table table-bordered" rows="1,2,3,4,5" columns="a,b,c,d,e,f,g,h" ></table>
+      <table class="table table-bordered" rows="1,2,3,4,5" columns="a,b,c,d,e,f,g,h" value=" " ></table>
       <div class="photo">
         <img id="main_window" src="https://lh4.googleusercontent.com/-602l5j1hMgo/T_RDvReuE7I/AAAAAAAAAvU/Heo3PpiOK4I/Jellyfish.jpg" >
       </div>
