--- a/samples.html
+++ b/samples.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="main">
-      <table class="table table-bordered" rows="1,2,3,4,5" columns="a,b,c,d,e,f,g,h"></table>
+      <table class="table table-bordered" rows="1,2,3,4,5" columns="a,b,c,d,e,f,g,h" value=" "></table>
       <div class="photo">
         <img id="main_window" src="https://lh4.googleusercontent.com/-602l5j1hMgo/T_RDvReuE7I/AAAAAAAAAvU/Heo3PpiOK4I/Jellyfish.jpg">
       </div>
@@ -20,8 +20,7 @@
       <div class="toolcross"></div>
     </div>
     <div class="side">
-<!--      <div class="picasatter" id="album1" user="username" album="albumid" authkey="key"></div>-->
-      <div class="picasatter" id="album1" user="103236949470535942612" album="5672709374582487457"></div>
+      <div class="picasatter" id="album1" user="username" album="albumid" authkey="key"></div>
     </div>
   </body>
 </html>
