modify samples.html to timeleft feature

--- a/samples.html
+++ b/samples.html
@@ -12,6 +12,7 @@
     <div class="main">
       <div class="render" id="rend"></div>
       <div class="summary" id="title">photo_title</div>
+      <div class="timeleft" id="TimeLeft">2:00</div>
       <div class="photo">
         <img id="main_window" src="https://lh4.googleusercontent.com/-602l5j1hMgo/T_RDvReuE7I/AAAAAAAAAvU/Heo3PpiOK4I/Jellyfish.jpg">
       </div>
